--- a/api/templates/base.html.twig
+++ b/api/templates/base.html.twig
@@ -32,21 +32,27 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="mainNav">
-                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" href="{{ path('app_main') }}">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Discover</a>
-                        </li>
-                    </ul>
+
                     <ul class="navbar-nav ms-auto">
                         {% if app.user %}
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ path('app_my_pack') }}">🐕 My Pack</a>
                             </li>
-                            <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <!-- Admin Menu (Temporary: Visible to all logged in users for MVP) -->
+                        {% if is_granted('ROLE_ADMIN_USER') %}
+                            <li class="nav-item dropdown me-2">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                    🛡️ Admin
+                                </a>
+                                <ul class="dropdown-menu dropdown-menu-end border-0 shadow">
+                                    <li><a class="dropdown-item" href="{{ path('app_admin_messages') }}">📩 Reports & Messages</a></li>
+                                    <li><a class="dropdown-item" href="{{ path('app_admin_users') }}">👥 User Management</a></li>
+                                </ul>
+                            </li>
+                        {% endif %}
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle d-flex align-items-center gap-2" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                     {{ app.user.firstName ?? app.user.email }}
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
