--- a/api/templates/base.html.twig
+++ b/api/templates/base.html.twig
@@ -56,7 +56,7 @@
                                     {{ app.user.firstName ?? app.user.email }}
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
-                                    <li><a class="dropdown-item" href="{{ path('app_my_pack') }}">Profile</a></li>
+                                    <li><a class="dropdown-item" href="{{ path('app_edit_profile') }}">Edit Profile</a></li>
                                     <li><hr class="dropdown-divider"></li>
                                     <li><a class="dropdown-item text-danger" href="{{ path('app_logout') }}">Logout</a></li>
                                 </ul>
