--- a/api/templates/feed/_post_card.html.twig
+++ b/api/templates/feed/_post_card.html.twig
@@ -44,7 +44,7 @@
     {% if post.imageName %}
         <img src="{{ asset('/uploads/posts/' ~ post.imageName) }}" class="card-img-bottom" alt="Post Image">
     {% elseif post.videoUrl %}
-        {% set videoId = post.youTubeId %}
+        {% set videoId = post.videoId %}
         {% if videoId %}
             <div class="ratio ratio-16x9">
                 <iframe src="https://www.youtube.com/embed/{{ videoId }}" title="YouTube video" allowfullscreen></iframe>
@@ -52,9 +52,44 @@
         {% endif %}
     {% endif %}
 
-    <div class="card-footer bg-white border-top-0 d-flex justify-content-around py-3">
-        <button class="btn btn-link text-decoration-none text-muted">❤️ Like</button>
-        <button class="btn btn-link text-decoration-none text-muted">💬 Comment</button>
-        <button class="btn btn-link text-decoration-none text-muted">📤 Share</button>
+    <div class="card-footer bg-white">
+        <div class="d-flex justify-content-between align-items-center">
+            
+            {# Turbo Frame for Like Button #}
+            <turbo-frame id="post_like_{{ post.id }}">
+                {% set isLiked = false %}
+                {% if app.user %}
+                    {% for like in post.postLikes %}
+                        {% if like.user == app.user %}
+                            {% set isLiked = true %}
+                        {% endif %}
+                    {% endfor %}
+                {% endif %}
+
+                <form action="{{ path('app_post_like', {id: post.id}) }}" method="post" 
+                      data-turbo-frame="post_like_{{ post.id }}" class="d-inline">
+                    <button type="submit" class="btn btn-link text-decoration-none p-0 me-3 {{ isLiked ? 'text-danger' : 'text-muted' }}">
+                        <i class="bi {{ isLiked ? 'bi-heart-fill' : 'bi-heart' }}"></i>
+                        <span>{{ post.postLikes|length }}</span>
+                    </button>
+                </form>
+            </turbo-frame>
+
+            {# Comment Toggle / Count #}
+            <button class="btn btn-link text-decoration-none text-muted p-0" 
+                    type="button" data-bs-toggle="collapse" data-bs-target="#comments-{{ post.id }}">
+                <i class="bi bi-chat"></i> {{ post.comments|length }} Comments
+            </button>
+            
+            {# Share Button (Dummy) #}
+            <button class="btn btn-link text-decoration-none text-muted p-0">
+                <i class="bi bi-share"></i> Share
+            </button>
+        </div>
+
+        {# Collapsible Comments Section #}
+        <div class="collapse mt-3" id="comments-{{ post.id }}">
+            {% include 'feed/_comments_section.html.twig' %}
+        </div>
     </div>
 </div>
